--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@vuepress/plugin-medium-zoom": "^1.7.1",
     "@vuepress/theme-blog": "^2.2.0",
     "markdown-it-plantuml": "^1.4.1",
+    "markdown-it-task-lists": "^2.1.1",
     "vue-class-component": "^7.2.6",
     "vue-property-decorator": "^9.0.2",
     "vuepress": "^1.5.3",
