--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
     "markdown-it-plantuml": "^1.4.1",
     "markdown-it-task-lists": "^2.1.1",
     "vue-class-component": "^7.2.6",
+    "vue-google-adsense": "^1.9.0",
     "vue-property-decorator": "^9.0.2",
+    "vue-script2": "^2.1.0",
     "vuepress": "^1.5.3",
     "vuepress-plugin-baidu-autopush": "^1.0.1",
     "vuepress-plugin-container": "^2.1.5",
